// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DayRows renders Feb 2016 correctly 1`] = `
Array [
  <div
    className="row"
>
    <div
        className="column"
    >
        <a
            href="/day/2016/1/1"
            onClick={[Function]}
        >
            <div>
                1
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2016/1/2"
            onClick={[Function]}
        >
            <div>
                2
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2016/1/3"
            onClick={[Function]}
        >
            <div>
                3
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2016/1/4"
            onClick={[Function]}
        >
            <div>
                4
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2016/1/5"
            onClick={[Function]}
        >
            <div>
                5
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2016/1/6"
            onClick={[Function]}
        >
            <div>
                6
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2016/1/7"
            onClick={[Function]}
        >
            <div>
                7
            </div>
        </a>
    </div>
</div>,
  <div
    className="row"
>
    <div
        className="column"
    >
        <a
            href="/day/2016/1/8"
            onClick={[Function]}
        >
            <div>
                8
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2016/1/9"
            onClick={[Function]}
        >
            <div>
                9
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2016/1/10"
            onClick={[Function]}
        >
            <div>
                10
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2016/1/11"
            onClick={[Function]}
        >
            <div>
                11
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2016/1/12"
            onClick={[Function]}
        >
            <div>
                12
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2016/1/13"
            onClick={[Function]}
        >
            <div>
                13
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2016/1/14"
            onClick={[Function]}
        >
            <div>
                14
            </div>
        </a>
    </div>
</div>,
  <div
    className="row"
>
    <div
        className="column"
    >
        <a
            href="/day/2016/1/15"
            onClick={[Function]}
        >
            <div>
                15
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2016/1/16"
            onClick={[Function]}
        >
            <div>
                16
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2016/1/17"
            onClick={[Function]}
        >
            <div>
                17
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2016/1/18"
            onClick={[Function]}
        >
            <div>
                18
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2016/1/19"
            onClick={[Function]}
        >
            <div>
                19
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2016/1/20"
            onClick={[Function]}
        >
            <div>
                20
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2016/1/21"
            onClick={[Function]}
        >
            <div>
                21
            </div>
        </a>
    </div>
</div>,
  <div
    className="row"
>
    <div
        className="column"
    >
        <a
            href="/day/2016/1/22"
            onClick={[Function]}
        >
            <div>
                22
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2016/1/23"
            onClick={[Function]}
        >
            <div>
                23
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2016/1/24"
            onClick={[Function]}
        >
            <div>
                24
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2016/1/25"
            onClick={[Function]}
        >
            <div>
                25
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2016/1/26"
            onClick={[Function]}
        >
            <div>
                26
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2016/1/27"
            onClick={[Function]}
        >
            <div>
                27
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2016/1/28"
            onClick={[Function]}
        >
            <div>
                28
            </div>
        </a>
    </div>
</div>,
  <div
    className="row"
>
    <div
        className="column"
    >
        <a
            href="/day/2016/1/29"
            onClick={[Function]}
        >
            <div>
                29
            </div>
        </a>
    </div>
    <div
        className="grey column no-day shadow"
    >
        <a
            href="/day/2016/1/null"
            onClick={[Function]}
        >
            <div />
        </a>
    </div>
    <div
        className="grey column no-day shadow"
    >
        <a
            href="/day/2016/1/null"
            onClick={[Function]}
        >
            <div />
        </a>
    </div>
    <div
        className="grey column no-day shadow"
    >
        <a
            href="/day/2016/1/null"
            onClick={[Function]}
        >
            <div />
        </a>
    </div>
    <div
        className="grey column no-day shadow"
    >
        <a
            href="/day/2016/1/null"
            onClick={[Function]}
        >
            <div />
        </a>
    </div>
    <div
        className="grey column no-day shadow"
    >
        <a
            href="/day/2016/1/null"
            onClick={[Function]}
        >
            <div />
        </a>
    </div>
    <div
        className="grey column no-day shadow"
    >
        <a
            href="/day/2016/1/null"
            onClick={[Function]}
        >
            <div />
        </a>
    </div>
</div>,
  <div
    className="row"
/>,
]
`;

exports[`DayRows renders Oct 2017 correctly 1`] = `
Array [
  <div
    className="row"
>
    <div
        className="grey column no-day shadow"
    >
        <a
            href="/day/2017/9/null"
            onClick={[Function]}
        >
            <div />
        </a>
    </div>
    <div
        className="grey column no-day shadow"
    >
        <a
            href="/day/2017/9/null"
            onClick={[Function]}
        >
            <div />
        </a>
    </div>
    <div
        className="grey column no-day shadow"
    >
        <a
            href="/day/2017/9/null"
            onClick={[Function]}
        >
            <div />
        </a>
    </div>
    <div
        className="grey column no-day shadow"
    >
        <a
            href="/day/2017/9/null"
            onClick={[Function]}
        >
            <div />
        </a>
    </div>
    <div
        className="grey column no-day shadow"
    >
        <a
            href="/day/2017/9/null"
            onClick={[Function]}
        >
            <div />
        </a>
    </div>
    <div
        className="grey column no-day shadow"
    >
        <a
            href="/day/2017/9/null"
            onClick={[Function]}
        >
            <div />
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2017/9/1"
            onClick={[Function]}
        >
            <div>
                1
            </div>
        </a>
    </div>
</div>,
  <div
    className="row"
>
    <div
        className="column"
    >
        <a
            href="/day/2017/9/2"
            onClick={[Function]}
        >
            <div>
                2
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2017/9/3"
            onClick={[Function]}
        >
            <div>
                3
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2017/9/4"
            onClick={[Function]}
        >
            <div>
                4
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2017/9/5"
            onClick={[Function]}
        >
            <div>
                5
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2017/9/6"
            onClick={[Function]}
        >
            <div>
                6
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2017/9/7"
            onClick={[Function]}
        >
            <div>
                7
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2017/9/8"
            onClick={[Function]}
        >
            <div>
                8
            </div>
        </a>
    </div>
</div>,
  <div
    className="row"
>
    <div
        className="column"
    >
        <a
            href="/day/2017/9/9"
            onClick={[Function]}
        >
            <div>
                9
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2017/9/10"
            onClick={[Function]}
        >
            <div>
                10
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2017/9/11"
            onClick={[Function]}
        >
            <div>
                11
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2017/9/12"
            onClick={[Function]}
        >
            <div>
                12
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2017/9/13"
            onClick={[Function]}
        >
            <div>
                13
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2017/9/14"
            onClick={[Function]}
        >
            <div>
                14
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2017/9/15"
            onClick={[Function]}
        >
            <div>
                15
            </div>
        </a>
    </div>
</div>,
  <div
    className="row"
>
    <div
        className="column"
    >
        <a
            href="/day/2017/9/16"
            onClick={[Function]}
        >
            <div>
                16
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2017/9/17"
            onClick={[Function]}
        >
            <div>
                17
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2017/9/18"
            onClick={[Function]}
        >
            <div>
                18
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2017/9/19"
            onClick={[Function]}
        >
            <div>
                19
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2017/9/20"
            onClick={[Function]}
        >
            <div>
                20
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2017/9/21"
            onClick={[Function]}
        >
            <div>
                21
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2017/9/22"
            onClick={[Function]}
        >
            <div>
                22
            </div>
        </a>
    </div>
</div>,
  <div
    className="row"
>
    <div
        className="column"
    >
        <a
            href="/day/2017/9/23"
            onClick={[Function]}
        >
            <div>
                23
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2017/9/24"
            onClick={[Function]}
        >
            <div>
                24
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2017/9/25"
            onClick={[Function]}
        >
            <div>
                25
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2017/9/26"
            onClick={[Function]}
        >
            <div>
                26
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2017/9/27"
            onClick={[Function]}
        >
            <div>
                27
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2017/9/28"
            onClick={[Function]}
        >
            <div>
                28
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2017/9/29"
            onClick={[Function]}
        >
            <div>
                29
            </div>
        </a>
    </div>
</div>,
  <div
    className="row"
>
    <div
        className="column"
    >
        <a
            href="/day/2017/9/30"
            onClick={[Function]}
        >
            <div>
                30
            </div>
        </a>
    </div>
    <div
        className="column"
    >
        <a
            href="/day/2017/9/31"
            onClick={[Function]}
        >
            <div>
                31
            </div>
        </a>
    </div>
    <div
        className="grey column no-day shadow"
    >
        <a
            href="/day/2017/9/null"
            onClick={[Function]}
        >
            <div />
        </a>
    </div>
    <div
        className="grey column no-day shadow"
    >
        <a
            href="/day/2017/9/null"
            onClick={[Function]}
        >
            <div />
        </a>
    </div>
    <div
        className="grey column no-day shadow"
    >
        <a
            href="/day/2017/9/null"
            onClick={[Function]}
        >
            <div />
        </a>
    </div>
    <div
        className="grey column no-day shadow"
    >
        <a
            href="/day/2017/9/null"
            onClick={[Function]}
        >
            <div />
        </a>
    </div>
    <div
        className="grey column no-day shadow"
    >
        <a
            href="/day/2017/9/null"
            onClick={[Function]}
        >
            <div />
        </a>
    </div>
</div>,
]
`;

exports[`generateRows renders the day rows from a chunked array 1`] = `
<div>
  <div
    className="row"
  >
    <div
      className="grey column no-day shadow"
    >
      <a
        href="/day/2017/9/null"
        onClick={[Function]}
      >
        <div />
      </a>
    </div>
    <div
      className="grey column no-day shadow"
    >
      <a
        href="/day/2017/9/null"
        onClick={[Function]}
      >
        <div />
      </a>
    </div>
    <div
      className="grey column no-day shadow"
    >
      <a
        href="/day/2017/9/null"
        onClick={[Function]}
      >
        <div />
      </a>
    </div>
    <div
      className="grey column no-day shadow"
    >
      <a
        href="/day/2017/9/null"
        onClick={[Function]}
      >
        <div />
      </a>
    </div>
    <div
      className="grey column no-day shadow"
    >
      <a
        href="/day/2017/9/null"
        onClick={[Function]}
      >
        <div />
      </a>
    </div>
    <div
      className="grey column no-day shadow"
    >
      <a
        href="/day/2017/9/null"
        onClick={[Function]}
      >
        <div />
      </a>
    </div>
    <div
      className="column"
    >
      <a
        href="/day/2017/9/1"
        onClick={[Function]}
      >
        <div>
          1
        </div>
      </a>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="column"
    >
      <a
        href="/day/2017/9/2"
        onClick={[Function]}
      >
        <div>
          2
        </div>
      </a>
    </div>
    <div
      className="column"
    >
      <a
        href="/day/2017/9/3"
        onClick={[Function]}
      >
        <div>
          3
        </div>
      </a>
    </div>
    <div
      className="column"
    >
      <a
        href="/day/2017/9/4"
        onClick={[Function]}
      >
        <div>
          4
        </div>
      </a>
    </div>
    <div
      className="column"
    >
      <a
        href="/day/2017/9/5"
        onClick={[Function]}
      >
        <div>
          5
        </div>
      </a>
    </div>
    <div
      className="column"
    >
      <a
        href="/day/2017/9/6"
        onClick={[Function]}
      >
        <div>
          6
        </div>
      </a>
    </div>
    <div
      className="column"
    >
      <a
        href="/day/2017/9/7"
        onClick={[Function]}
      >
        <div>
          7
        </div>
      </a>
    </div>
    <div
      className="column"
    >
      <a
        href="/day/2017/9/8"
        onClick={[Function]}
      >
        <div>
          8
        </div>
      </a>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="column"
    >
      <a
        href="/day/2017/9/9"
        onClick={[Function]}
      >
        <div>
          9
        </div>
      </a>
    </div>
    <div
      className="column"
    >
      <a
        href="/day/2017/9/10"
        onClick={[Function]}
      >
        <div>
          10
        </div>
      </a>
    </div>
    <div
      className="column"
    >
      <a
        href="/day/2017/9/11"
        onClick={[Function]}
      >
        <div>
          11
        </div>
      </a>
    </div>
    <div
      className="column"
    >
      <a
        href="/day/2017/9/12"
        onClick={[Function]}
      >
        <div>
          12
        </div>
      </a>
    </div>
    <div
      className="column"
    >
      <a
        href="/day/2017/9/13"
        onClick={[Function]}
      >
        <div>
          13
        </div>
      </a>
    </div>
    <div
      className="column"
    >
      <a
        href="/day/2017/9/14"
        onClick={[Function]}
      >
        <div>
          14
        </div>
      </a>
    </div>
    <div
      className="column"
    >
      <a
        href="/day/2017/9/15"
        onClick={[Function]}
      >
        <div>
          15
        </div>
      </a>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="column"
    >
      <a
        href="/day/2017/9/16"
        onClick={[Function]}
      >
        <div>
          16
        </div>
      </a>
    </div>
    <div
      className="column"
    >
      <a
        href="/day/2017/9/17"
        onClick={[Function]}
      >
        <div>
          17
        </div>
      </a>
    </div>
    <div
      className="column"
    >
      <a
        href="/day/2017/9/18"
        onClick={[Function]}
      >
        <div>
          18
        </div>
      </a>
    </div>
    <div
      className="column"
    >
      <a
        href="/day/2017/9/19"
        onClick={[Function]}
      >
        <div>
          19
        </div>
      </a>
    </div>
    <div
      className="column"
    >
      <a
        href="/day/2017/9/20"
        onClick={[Function]}
      >
        <div>
          20
        </div>
      </a>
    </div>
    <div
      className="column"
    >
      <a
        href="/day/2017/9/21"
        onClick={[Function]}
      >
        <div>
          21
        </div>
      </a>
    </div>
    <div
      className="column"
    >
      <a
        href="/day/2017/9/22"
        onClick={[Function]}
      >
        <div>
          22
        </div>
      </a>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="column"
    >
      <a
        href="/day/2017/9/23"
        onClick={[Function]}
      >
        <div>
          23
        </div>
      </a>
    </div>
    <div
      className="column"
    >
      <a
        href="/day/2017/9/24"
        onClick={[Function]}
      >
        <div>
          24
        </div>
      </a>
    </div>
    <div
      className="column"
    >
      <a
        href="/day/2017/9/25"
        onClick={[Function]}
      >
        <div>
          25
        </div>
      </a>
    </div>
    <div
      className="column"
    >
      <a
        href="/day/2017/9/26"
        onClick={[Function]}
      >
        <div>
          26
        </div>
      </a>
    </div>
    <div
      className="column"
    >
      <a
        href="/day/2017/9/27"
        onClick={[Function]}
      >
        <div>
          27
        </div>
      </a>
    </div>
    <div
      className="column"
    >
      <a
        href="/day/2017/9/28"
        onClick={[Function]}
      >
        <div>
          28
        </div>
      </a>
    </div>
    <div
      className="column"
    >
      <a
        href="/day/2017/9/29"
        onClick={[Function]}
      >
        <div>
          29
        </div>
      </a>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="column"
    >
      <a
        href="/day/2017/9/30"
        onClick={[Function]}
      >
        <div>
          30
        </div>
      </a>
    </div>
    <div
      className="column"
    >
      <a
        href="/day/2017/9/31"
        onClick={[Function]}
      >
        <div>
          31
        </div>
      </a>
    </div>
    <div
      className="grey column no-day shadow"
    >
      <a
        href="/day/2017/9/null"
        onClick={[Function]}
      >
        <div />
      </a>
    </div>
    <div
      className="grey column no-day shadow"
    >
      <a
        href="/day/2017/9/null"
        onClick={[Function]}
      >
        <div />
      </a>
    </div>
    <div
      className="grey column no-day shadow"
    >
      <a
        href="/day/2017/9/null"
        onClick={[Function]}
      >
        <div />
      </a>
    </div>
    <div
      className="grey column no-day shadow"
    >
      <a
        href="/day/2017/9/null"
        onClick={[Function]}
      >
        <div />
      </a>
    </div>
    <div
      className="grey column no-day shadow"
    >
      <a
        href="/day/2017/9/null"
        onClick={[Function]}
      >
        <div />
      </a>
    </div>
  </div>
</div>
`;
